# jequation

./: .gitignore  .jequation.py.swp  README.md  jequation.py  pyproject.toml  tester.sh
jequation/: __init__.py  equations.py  tester.sh
jequation/algebraic_identity/: algebraic_identity.py  is_algebraic_identity.py  test.py
jequation/equations/: Diophantine.py
jequation/tests/: test_algebraic_identity.py
jequation/tests/algebraic_identity/: test_is_algebraic_identity.py
nostalgic/: README.md  jequation.py
