[tool.poetry]
name = "jequation"
version = "0.3.1"
description = "this module like a math library. for solving algebra and equations."
authors = ["EmadDeve20"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
